[package]
name = "NyxoCode"
version = "0.1.0"
edition = "2024"

[dependencies]
# For pattern matching and parsing
regex = "1.10.2"

# Terminal I/O operations
crossterm = "0.27.0"

# Command line editing and history
rustyline = "12.0.0"

# Handle user directories and paths
dirs = "5.0.1"

colored = "2.0"